--- a/styles.css
+++ b/styles.css
@@ -14,37 +14,27 @@ P{
     float:right;
     padding:5px;
 }
-
-    ul {
-        list-style-type: none;
-        margin:0;
-        padding:0 ;
-        width: 200px;
-        background-color: #f1f1f1;
-      }
-      
-      li a {
+ul {
+    list-style-type: none;
+    margin:0;
+    padding:0 ;
+    width: 200px;
+    background-color: #f1f1f1;}
+li a {
         display: flex;
         color: #000;
         padding: 8px 16px;
         text-decoration: none;
-      }
-      
-    
-      li a:hover {
+    }
+li a:hover{
         background-color:green;
         color: white;
-      }
+    }
 a{
     color:rgb(240, 23, 23);
     font-size:20px;
-
-
 }
-ul li a:hoover{
-    color:red;
-    background-color: green;
-}
+
 h1{
    box-sizing: content-box; 
    margin:10px 700px;
@@ -86,10 +76,6 @@ h3{
    color:white;
    text-align:center;
 }
-.contacts{
-    padding:20px;
-    font-size:20px;
-}
 .footer>p>a{
     padding:15px;
     color:white;
@@ -101,9 +87,8 @@ div.text{
     color:rgb(64, 233, 64);
     
 }
-div.call{
-    color: rgb(64,233,64)
-}
+
+
 
 
 
